# giskard_job_interview

./: .gitignore  install.sh  readme.md
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
client/: package-lock.json  package.json
client/src/: App.vue  apollo-client.ts  main.ts
client/src/components/: File.vue  Odds.vue  TheHome.vue
client/src/components/icons/: IconUpload.vue
client/src/graphql/: getOdds.ts
client/src/interfaces/: empire.ts  response.ts
client/src/types/: hunter.ts
client/src/views/: HomeView.vue
example1/: empire.json
example2/: empire.json
example3/: empire.json
example4/: empire.json
server/: Cargo.toml  Makefile
server/src/: lib.rs  main.rs
server/src/database/: sqlite.rs
server/src/enums/: error.rs  itinary.rs  mod.rs  status.rs
server/src/query/: main.rs
server/src/structs/: empire.rs  hunter.rs  melenium.rs  mod.rs  route.rs
server/src/utils/: util.rs
