[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = [
    "ONDONDA Prince Merveil <pondonda@gmail.com>"
]
description = "Giskard test entry for Senior software engineer"
license = "MIT OR Apache-2.0"
repository = ""
readme=""
documentation=""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[server]]
name = "give-me-the-odds"

[dependencies]
async-graphql = "6.0.10"
async-graphql-poem = "6.0.10"
pathfinding = "4.3.3"
poem = "1.3.58"
rusqlite = "0.30.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.192"
serde_json = "1.0"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
